--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/Oreki-san/RIN.git"
+        "url": "git+https://github.com/phenias/RIN"
     },
     "keywords": [
         "bot",
